2006-06-16  Scott Ellington  <scott.ellington@gmail.com> 

	* SolutionDeployer.cs: Deploy and GenerateFiles can now
	take a configuration parameter
	* Makefile.am: added new file.
	* TarballTargetEditorWidget.cs:
	* Handler.cs:
	Add option to set a default configuration at deployment.

2006-06-15  Scott Ellington  <scott.ellington@gmail.com> 
	
	* SolutionDeployer.cs: always run autogen.sh on Deploy
	* templates/Makefile.include: clean up

2006-06-15  Scott Ellington  <scott.ellington@gmail.com> 

	* SimpleProjectMakefileHandler.cs:
	* templates/exe.wrapper.in.template:
	pass runtime parameters on to exe wrapper
	* Handler.cs:
	* SolutionDeployer.cs:
	* MonoDevelop.Autotools.addin.xml:
	* Commands.cs:
	Moved 'make dist' functionality into SolutionDeployer to
	be consumed by the new IDeployHandler interface and removed
	'Create Distributable' command.	
	* Makefile.am: rename DeployHandler to Commands and
	removed a trailing space.

2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* Handler.cs: Implemented a basic IDeployHandler and the
	  needed support classes.
	* MonoDevelop.Autotools.addin.xml: Registered the new deploy
	  handler to the deploy service.
	* Makefile.am: Added Handler.cs and updated references.
	
2006-06-15  Scott Ellington  <scott.ellington@gmail.com> 

	* SimpleProjectMakefileHandler.cs:
	* SolutionDeployer.cs:
	* templates/Makefile.include:
	* templates/Makefile.am.project.template:
	* templates/configure.ac.template:
	* ISimpleAutotoolsSetup.cs:
	* AutotoolsContext.cs:
	* SolutionMakefileHandler.cs:
	Handle project configurations

2006-06-13  Scott Ellington  <scott.ellington@gmail.com> 

	* SimpleProjectMakefileHandler.cs: 
	remove Console.WriteLine
	* SolutionDeployer.cs:
	* MonoDevelop.Autotools.addin.xml:
	* DeployHandler.cs:
	* Makefile.am:
	Add new functionality which wraps 'make dist'
	and other changes

2006-06-09  Scott Ellington  <scott.ellington@gmail.com> 

	* SimpleProjectMakefileHandler.cs:
	* SolutionDeployer.cs: